// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Link As a <button> 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <button
      class="Link-sc-1lpx3d0-0 mtyWY"
      color="blue"
    >
      Link
    </button>
  </div>
</div>
`;

exports[`Storyshots Link Link 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <a
      class="Link-sc-1lpx3d0-0 hFcUQo"
      color="blue"
      href="http://nulogy.design"
    >
      Link
    </a>
  </div>
</div>
`;

exports[`Storyshots Link With a different color 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <a
      class="Link-sc-1lpx3d0-0 kmDyah"
      color="black"
      href="http://nulogy.design"
    >
      Link
    </a>
  </div>
</div>
`;

exports[`Storyshots Link Without underline 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <a
      class="Link-sc-1lpx3d0-0 ksBFcO"
      color="blue"
      href="http://nulogy.design"
    >
      Link
    </a>
  </div>
</div>
`;
